--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "format": "prettier --write ."
   },
   "dependencies": {
+    "@heroicons/react": "^2.1.5",
+    "clsx": "^2.1.1",
     "next": "14.2.14",
     "react": "^18",
     "react-dom": "^18"
